add_executable(lab2_executable src/main.cpp
        src/Containers/Chain.cpp
        inc/Containers/Chain.h
        src/Containers/List.cpp
        inc/Containers/List.h
        inc/Tests/TestBase.h
        src/Tests/Logical/Test1.cpp
        inc/Tests/Logical/Test1.h
        inc/Tests/Functional/Test2.h
        src/Tests/Functional/Test2.cpp
        inc/Tests/TestContoller.h)


